tests/should-fail/arrow-at-end-of-do.ls
import io;

main = do {
    x <- return 10;
  };
